--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Chaos test</title>
+    <title>Git Chaos</title>
   </head>
 
   <body>
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/cnyouker/chaos">View on GitHub</a>
 
           <h1 id="project_title">Chaos</h1>
-          <h2 id="project_tagline">chaos</h2>
+          <h2 id="project_tagline">人一辈子不会因为你做过什么而后悔，而会因为你没做什么事情而后悔。</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/cnyouker/chaos/zipball/master">Download this project as a .zip file</a>
